[package]
name = "device-info"
version.workspace = true
authors.workspace = true
documentation.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mecha_device_oem_info = "0.1.1"
zbus = { version = "4.1.2", features = ["tokio"] }
utils ={ path = "../utils"}
anyhow = "1.0.80"
