[package]
name = "network"
version.workspace = true
authors.workspace = true
documentation.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mecha_network_ctl = "0.1.1"
zbus = { version = "4.1.2", features = ["tokio"] }
utils ={ path = "../utils"}
wifi-ctrl = "0.2.4"
anyhow = "1.0.80"
zbus_polkit = { version = "4.0.0", features = ["tokio"] }

[features]
default = []
mock = []
