[package]
name = "services"
version.workspace = true
authors.workspace = true
documentation.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
tokio = { version = "1.36.0", features = ["full"] }
display = { path = "../display"}
power   = {path = "../power"}
network = {path = "../network"}
bluetooth = {path = "../bluetooth"}
zbus = { version = "4.1.2", features = ["tokio"] }
